Change resource mapping in controllers. Change field in ReviewServiseImplTest.